--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
-	<title>Shitty Weather</title>
+	<title>Shitty Weather Map</title>
 </head>
 
 <body>
